--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <span>Who</span>
                     <span>Add dates</span>
                 </div>
-                <div class="who2 bg-red-500 rounded-circle "><img src="./images/icons8-search-50.png" alt=""></div>
+                <div class="who2 bg-danger rounded-circle p-1"><img src="./images/icons8-search-50.png" style="height: 30px;width: 30px;" alt="img"></div>
             </div>
         </div>
     </div>
